--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Task</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="css/normalize.css" />
-    <!-- <link rel="stylesheet" href="css/fonts.css" /> -->
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/css/intlTelInput.min.css"
+    />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
@@ -31,205 +29,209 @@
               <span class="table_subtitle_item">ISO</span>
             </div>
             <div class="table_items">
-              <div class="item">Абхазия</div>
-              <div class="item">Республика Абхазия</div>
-              <div class="item">АВ</div>
-              <div class="item">АВН</div>
-              <div class="item">895</div>
-              <div class="item">Аруба</div>
-              <div class="item"></div>
-              <div class="item">АW</div>
-              <div class="item">АВW</div>
-              <div class="item">533</div>
-              <div class="item">Афганистан</div>
-              <div class="item">Переходное Исламское Государство</div>
-              <div class="item">AF</div>
-              <div class="item">AFG</div>
-              <div class="item">004</div>
-              <div class="item">Ангола</div>
-              <div class="item">Республика Ангола</div>
-              <div class="item">АО</div>
-              <div class="item">AGO</div>
-              <div class="item">024</div>
-              <div class="item">Ангилья</div>
-              <div class="item"></div>
-              <div class="item">AI</div>
-              <div class="item">AIA</div>
-              <div class="item">660</div>
-              <div class="item">Эландские острова</div>
-              <div class="item"></div>
-              <div class="item">AX</div>
-              <div class="item">ALA</div>
-              <div class="item">248</div>
-              <div class="item">Албания</div>
-              <div class="item">Республика Албания</div>
-              <div class="item">AL</div>
-              <div class="item">ALB</div>
-              <div class="item">008</div>
-              <div class="item">Андора</div>
-              <div class="item">Княжество Андорра</div>
-              <div class="item">AD</div>
-              <div class="item">AND</div>
-              <div class="item">020</div>
-              <div class="item">Объединенные Арабские Эмираты</div>
-              <div class="item"></div>
-              <div class="item">AE</div>
-              <div class="item">ARE</div>
-              <div class="item">784</div>
-              <div class="item">Аргентина</div>
-              <div class="item">Аргентинская Республика</div>
-              <div class="item">AR</div>
-              <div class="item">ARG</div>
-              <div class="item">032</div>
-              <div class="item">Армения</div>
-              <div class="item">Республика</div>
-              <div class="item">AM</div>
-              <div class="item">ARM</div>
-              <div class="item">051</div>
-              <div class="item">Американская Самоа</div>
-              <div class="item"></div>
-              <div class="item">AS</div>
-              <div class="item">ASM</div>
-              <div class="item">016</div>
-              <div class="item">Антарктида</div>
-              <div class="item"></div>
-              <div class="item">AQ</div>
-              <div class="item">ATA</div>
-              <div class="item">010</div>
-              <div class="item">Французские Южные территории</div>
-              <div class="item"></div>
-              <div class="item">TF</div>
-              <div class="item">ATF</div>
-              <div class="item">260</div>
-              <div class="item">Антигуа и Барбуда</div>
-              <div class="item"></div>
-              <div class="item">AG</div>
-              <div class="item">ATG</div>
-              <div class="item">028</div>
-              <div class="item">Австралия</div>
-              <div class="item"></div>
-              <div class="item">AU</div>
-              <div class="item">AUS</div>
-              <div class="item">036</div>
-              <div class="item">Австрия</div>
-              <div class="item">Австрийская Республика</div>
-              <div class="item">AT</div>
-              <div class="item">AUT</div>
-              <div class="item">040</div>
-              <div class="item">Азербайджан</div>
-              <div class="item">Республика Азербайджан</div>
-              <div class="item">AZ</div>
-              <div class="item">AZE</div>
-              <div class="item">031</div>
-              <div class="item">Бурунди</div>
-              <div class="item">Республика Бурунди</div>
-              <div class="item">BI</div>
-              <div class="item">BDI</div>
-              <div class="item">108</div>
-              <div class="item">Бельгия</div>
-              <div class="item">Королевство Бельгии</div>
-              <div class="item">BE</div>
-              <div class="item">BEL</div>
-              <div class="item">056</div>
-              <div class="item">Бенин</div>
-              <div class="item">Республика Бенин</div>
-              <div class="item">BJ</div>
-              <div class="item">BEN</div>
-              <div class="item">204</div>
+              <span class="item">Абхазия</span>
+              <span class="item">Республика Абхазия</span>
+              <span class="item">АВ</span>
+              <span class="item">АВН</span>
+              <span class="item">895</span>
+              <span class="item">Аруба</span>
+              <span class="item"></span>
+              <span class="item">АW</span>
+              <span class="item">АВW</span>
+              <span class="item">533</span>
+              <span class="item">Афганистан</span>
+              <span class="item">Переходное Исламское Государство</span>
+              <span class="item">AF</span>
+              <span class="item">AFG</span>
+              <span class="item">004</span>
+              <span class="item">Ангола</span>
+              <span class="item">Республика Ангола</span>
+              <span class="item">АО</span>
+              <span class="item">AGO</span>
+              <span class="item">024</span>
+              <span class="item">Ангилья</span>
+              <span class="item"></span>
+              <span class="item">AI</span>
+              <span class="item">AIA</span>
+              <span class="item">660</span>
+              <span class="item">Эландские острова</span>
+              <span class="item"></span>
+              <span class="item">AX</span>
+              <span class="item">ALA</span>
+              <span class="item">248</span>
+              <span class="item">Албания</span>
+              <span class="item">Республика Албания</span>
+              <span class="item">AL</span>
+              <span class="item">ALB</span>
+              <span class="item">008</span>
+              <span class="item">Андора</span>
+              <span class="item">Княжество Андорра</span>
+              <span class="item">AD</span>
+              <span class="item">AND</span>
+              <span class="item">020</span>
+              <span class="item">Объединенные Арабские Эмираты</span>
+              <span class="item"></span>
+              <span class="item">AE</span>
+              <span class="item">ARE</span>
+              <span class="item">784</span>
+              <span class="item">Аргентина</span>
+              <span class="item">Аргентинская Республика</span>
+              <span class="item">AR</span>
+              <span class="item">ARG</span>
+              <span class="item">032</span>
+              <span class="item">Армения</span>
+              <span class="item">Республика</span>
+              <span class="item">AM</span>
+              <span class="item">ARM</span>
+              <span class="item">051</span>
+              <span class="item">Американская Самоа</span>
+              <span class="item"></span>
+              <span class="item">AS</span>
+              <span class="item">ASM</span>
+              <span class="item">016</span>
+              <span class="item">Антарктида</span>
+              <span class="item"></span>
+              <span class="item">AQ</span>
+              <span class="item">ATA</span>
+              <span class="item">010</span>
+              <span class="item">Французские Южные территории</span>
+              <span class="item"></span>
+              <span class="item">TF</span>
+              <span class="item">ATF</span>
+              <span class="item">260</span>
+              <span class="item">Антигуа и Барбуда</span>
+              <span class="item"></span>
+              <span class="item">AG</span>
+              <span class="item">ATG</span>
+              <span class="item">028</span>
+              <span class="item">Австралия</span>
+              <span class="item"></span>
+              <span class="item">AU</span>
+              <span class="item">AUS</span>
+              <span class="item">036</span>
+              <span class="item">Австрия</span>
+              <span class="item">Австрийская Республика</span>
+              <span class="item">AT</span>
+              <span class="item">AUT</span>
+              <span class="item">040</span>
+              <span class="item">Азербайджан</span>
+              <span class="item">Республика Азербайджан</span>
+              <span class="item">AZ</span>
+              <span class="item">AZE</span>
+              <span class="item">031</span>
+              <span class="item">Бурунди</span>
+              <span class="item">Республика Бурунди</span>
+              <span class="item">BI</span>
+              <span class="item">BDI</span>
+              <span class="item">108</span>
+              <span class="item">Бельгия</span>
+              <span class="item">Королевство Бельгии</span>
+              <span class="item">BE</span>
+              <span class="item">BEL</span>
+              <span class="item">056</span>
+              <span class="item">Бенин</span>
+              <span class="item">Республика Бенин</span>
+              <span class="item">BJ</span>
+              <span class="item">BEN</span>
+              <span class="item">204</span>
             </div>
           </div>
           <div class="card">
             <form class="card_wrapper">
               <div class="phone_name">
-                <label class="subtitle" for="name">Имя*</label>
+                <label class="subtitle" for="names">Имя*</label>
                 <input
                   type="text"
-                  id="name"
+                  id="names"
                   placeholder="Введите имя"
-                  name="name"
+                  name="names"
                   class="input_name"
                 />
-                <label class="subtitle" for="phone">Телефон*</label>
+                <label class="subtitle" for="phone-input">Телефон*</label>
                 <input
                   class="input_name"
                   type="tel"
-                  id="phone"
-                  placeholder="+7"
-                  name="phone"
+                  id="phone-input"
+                  placeholder=" "
+                  pattern="\d*"
+                  oninput="this.value = this.value.replace(/\D/g, '')"
+                  maxlength="12"
                 />
               </div>
               <div class="radio_checkboxes">
-                <!-- Радиокнопки для выбора гендера -->
                 <div class="choice_gender">
-                  <label class="subtitle">Пол*</label>
-                  <label>
+                  <span class="subtitle">Пол*</span>
+                  <label class="custom-radio" for="gender_m">
                     <input
-                      class="gender_male"
                       type="radio"
                       name="gender"
                       value="male"
+                      id="gender_m"
                     />
-                    Мужской
+                    <span>Мужской</span>
                   </label>
-                  <label>
-                    <input type="radio" name="gender" value="female" />
-                    Женский
+                  <label class="custom-radio" for="gender_f">
+                    <input
+                      type="radio"
+                      name="gender"
+                      value="female"
+                      id="gender_f"
+                    />
+                    <span>Женский</span>
                   </label>
                 </div>
-                <!-- Чекбоксы -->
                 <div class="checkboxes">
-                  <label class="subtitle">Любимые жанры видеоигр</label>
-                  <label>
+                  <span class="subtitle">Любимые жанры видеоигр</span>
+                  <label class="custom-checkbox" for="Platformers">
                     <input
                       type="checkbox"
-                      name="interests"
-                      value="platformers"
+                      value="Platformers"
+                      id="Platformers"
                     />
-                    Платформеры
+                    <span>Платформеры</span>
                   </label>
-                  <label>
-                    <input type="checkbox" name="interests" value="Shooters" />
-                    Шутеры
+                  <label class="custom-checkbox" for="Shooters">
+                    <input type="checkbox" value="Shooters" id="Shooters" />
+                    <span>Шутеры</span>
                   </label>
-                  <label>
+                  <label class="custom-checkbox" for="StealthGames">
                     <input
                       type="checkbox"
-                      name="interests"
                       value="Stealth games"
+                      id="StealthGames"
                     />
-                    Стелс-игры
+                    <span>Стелс-игры</span>
                   </label>
-                  <label>
+                  <label class="custom-checkbox" for="SurvivalGames">
                     <input
                       type="checkbox"
-                      name="interests"
                       value="Survival Games"
+                      id="SurvivalGames"
                     />
-                    Игры на выживание
+                    <span>Игры на выживание</span>
                   </label>
-                  <label>
+                  <label class="custom-checkbox" for="RhythmGames">
                     <input
                       type="checkbox"
-                      name="interests"
-                      value="Rhythm games"
+                      value="Rhythm Games"
+                      id="RhythmGames"
                     />
-                    Ритм-игры
+                    <span>Ритм-игры</span>
                   </label>
-                  <label>
+                  <label class="custom-checkbox" for="BattleRoyaleGames">
                     <input
                       type="checkbox"
-                      name="interests"
                       value="Battle Royale Games"
+                      id="BattleRoyaleGames"
                     />
-                    Игры королевской битвы
+                    <span>Игры королевской битвы</span>
                   </label>
                 </div>
               </div>
-              <!-- Кнопка для отправки формы -->
               <button class="btn" type="submit" alt="arrow" value="Отправить">
                 Отправить
                 <svg
-                  class="my-svg"
+                  class="arrow"
                   width="24"
                   height="24"
                   viewBox="0 0 24 24"
@@ -257,5 +259,7 @@
         </div>
       </div>
     </section>
+    <script src="/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/js/intlTelInput.min.js"></script>
   </body>
 </html>
